# cppcourse-brunel

./: CMakeLists.txt  Network.cpp  Network.h  Neuron.cpp  Neuron.h  README.md  annotated.html  data_network_A.gdf  data_network_B.gdf  data_network_C.gdf  data_network_D.gdf  network_main.cpp  network_unittest.cpp  neuron_unittest.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
